# declarative-agent-library-chart

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  ci.sh  ct.yaml  devspace.yaml  lefthook.yml  skaffold.yaml
examples/with-plugins/consumer_plugin_wheel/: README.md  pyproject.toml
examples/with-plugins/consumer_plugin_wheel/dalc_consumer_demo/: __init__.py  plugin.py
helm/src/: Dockerfile  README.md  pyproject.toml
helm/src/agent/: agent_models.py  agent_tracing.py  app.py  chat_model.py  llm_metrics.py  mcp_langchain_tools.py  metrics.py  o11y_middleware.py  run_context.py  runtime_identity.py  subagent_exec.py  subagent_units.py  supervisor.py  trigger_context.py  trigger_graph.py  trigger_steps.py  wandb_session.py
helm/src/agent/migrations/: 001_hosted_agents_observability.sql  002_slack_correlation_run_identity.sql  __init__.py  schema.py
helm/src/agent/observability/: __init__.py  bootstrap.py  checkpointer.py  correlation.py  label_registry.py  legacy_agent_metrics.py  legacy_scraper_metrics.py  metric_semantics.py  pglite_runtime.py  plugins_config.py  postgres_repos.py  repositories.py  run_context.py  settings.py  side_effects.py  slack_ingest.py  span_summaries.py  stores.py  trajectory.py  wandb_run_tags.py  wandb_trace.py
helm/src/agent/observability/events/: bus.py  (+3 more)
helm/src/agent/rag/: app.py  metrics.py  o11y_middleware.py  store.py
helm/src/agent/scrapers/: __init__.py  base.py  cursor_store.py  jira_job.py  metrics.py  slack_job.py
helm/src/agent/tools/: README.md  contract.py  dispatch.py  registry.py  sample_echo.py
helm/src/agent/triggers/: __init__.py  dedupe.py  env_bool.py  guarded_run.py  http_common.py
helm/src/hosted_agents/: app.py  feedback_registry.py  llm_metrics.py  mcp_langchain_tools.py  metrics.py  o11y_logging.py  o11y_middleware.py  runtime_config.py  supervisor.py  trigger_context.py  trigger_graph.py  trigger_steps.py
helm/src/hosted_agents/jira_trigger/: __init__.py  config.py  dispatch.py  payload.py  webhook_route.py
helm/src/hosted_agents/migrations/: 001_hosted_agents_observability.sql
helm/src/hosted_agents/observability/: __init__.py  checkpointer.py  feedback.py  label_registry.py  postgres_repos.py  repositories.py  run_context.py  settings.py  side_effects.py  slack_ingest.py  stores.py  trajectory.py  wandb_run_tags.py  wandb_trace.py
helm/src/hosted_agents/rag/: __init__.py  app.py  models.py  store.py
helm/src/hosted_agents/scrapers/: __init__.py  base.py  cursor_store.py  jira_job.py  metrics.py  reference_job.py  slack_job.py
helm/src/hosted_agents/slack_trigger/: __init__.py  config.py  dedupe.py  dispatch.py  http_events.py  socket_mode.py
helm/src/hosted_agents/tools/: README.md  __init__.py  dispatch.py
helm/src/hosted_agents/tools_impl/: README.md  __init__.py  dispatch.py  sample_echo.py  slack_chat_and_history.py  slack_post.py  slack_reactions.py
helm/src/src/hosted_agents/: __init__.py  agent_tracing.py  chat_model.py  metrics.py  trigger_errors.py  trigger_graph.py
helm/src/tests/: conftest.py  consumer_plugin_error_on_import.py  test_agent_extensions.py  test_agent_tracing.py  test_app.py  test_boot_validation.py  test_chart_values_contract.py  test_chat_model.py  test_checkpoint_feedback_api.py  test_checkpointing.py  test_consumer_plugins.py  test_cursor_store.py  test_env.py  test_feedback_registry.py  test_init.py  test_jira_job.py  test_jira_tools.py  test_jira_trigger.py  test_langfuse_plugin.py  test_mcp_langchain_tools.py  test_migrations_schema.py  test_module_deletions.py  test_o11y_metrics.py  test_observability_lifecycle_bus.py  test_optional_langfuse_import.py  test_pglite_runtime.py  test_postgres_checkpointer.py  test_postgres_env.py  test_postgres_observability_repos.py  test_pyproject_entry_points.py  test_python_complexity_ci_contract.py  test_rag_app.py  test_rag_o11y_metrics.py  test_reference_scraper.py  test_reply.py  test_runtime_config.py  test_scraper_metrics.py  test_slack_job.py  test_slack_tool_metrics_plugin.py  test_slack_tools_impl.py  (+13 more)
helm/src/tests/integration/: __init__.py  smoke_rag.py  test_kind_o11y_prometheus.py  test_rag_http.py  test_stitched_runtime_pipeline.py
helm/src/tests/scripts/: integration_kind_o11y_prometheus.sh  prometheus-kind-o11y-values.yaml
runtime/: pyproject.toml
runtime/scripts/: smoke_rag.py
runtime/src/hosted_agents/: agent_models.py  agent_tracing.py  app.py  checkpointing.py  env.py  feedback_registry.py  o11y_logging.py  o11y_middleware.py  reply.py  run_context.py  runtime_config.py  skills_state.py  subagent_exec.py  subagent_units.py  trigger_context.py  trigger_graph.py  trigger_steps.py  wandb_session.py
runtime/src/hosted_agents/data/: feedback_registry.v1.json
runtime/src/hosted_agents/migrations/: 001_hosted_agents_observability.sql  __init__.py  schema.py
runtime/src/hosted_agents/observability/: __init__.py  atif.py  checkpointer.py  pglite_runtime.py  postgres_env.py  postgres_repos.py  repositories.py  run_context.py  settings.py  shadow.py  side_effects.py  slack_ingest.py  stores.py  trajectory.py
runtime/src/hosted_agents/rag/: embeddings.py  o11y_middleware.py  store.py
runtime/src/hosted_agents/scrapers/: __init__.py  jira_job.py  metrics.py  reference_job.py  slack_job.py  stub_job.py
runtime/src/hosted_agents/tools_impl/: dispatch.py  slack_post.py
runtime/tests/: __init__.py  conftest.py  test_agent_extensions.py  test_agent_tracing.py  test_checkpoint_feedback_api.py  test_checkpointing.py  test_feedback_registry.py  test_jira_job.py  test_migrations_schema.py  test_o11y_metrics.py  test_observability_foundation.py  test_pglite_runtime.py  test_postgres_checkpointer.py  test_postgres_env.py  test_postgres_observability_repos.py  test_rag_app.py  test_rag_o11y_metrics.py  test_reference_scraper.py  test_runtime_config.py  test_scraper_metrics.py  test_slack_job.py  test_subagent_roles.py
runtime/tests/integration/: test_kind_o11y_prometheus.py
runtime/tests/scripts/: integration_kind_o11y_prometheus.sh  prometheus-kind-o11y-values.yaml
(+571 files in other folders)
