[project]
name = "declarative-agent-library-chart"
version = "0.1.0"
description = "YAML-configured hosted agent runtime (FastAPI / LangGraph) for the Declarative Agent Library chart"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langgraph>=1.1.6",
    "prometheus-client>=0.21.0",
    "psycopg[binary]>=3.2.0",
    # [DALC-REQ-SLACK-SCRAPER-002]
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.33.0",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.44.0",
]

[project.optional-dependencies]
wandb = [
    "wandb>=0.25.1",
]
pglite = [
    "py-pglite[psycopg]>=0.5.0",
]
postgres = [
    "langgraph-checkpoint-postgres==3.0.5",
    "psycopg[binary]==3.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hosted_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: kind/Helm/Prometheus; requires RUN_KIND_O11Y_INTEGRATION=1 for o11y script",
    "pglite: requires Node.js + py-pglite; starts embedded Postgres",
    "postgres_integration: requires Docker Postgres (not run in default CI)",
]
addopts = [
    "--cov=hosted_agents",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]

[tool.coverage.run]
source = ["hosted_agents"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    # CronJob entrypoints: large surface; covered by targeted tests + Helm.
    "*/scrapers/jira_job.py",
    "*/scrapers/slack_job.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2

[dependency-groups]
dev = [
    "complexipy>=2.0.0",
    "coverage[toml]>=7.13.5",
    "langgraph-checkpoint-postgres==3.0.5",
    "psycopg[binary]==3.3.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.8.0",
    "wandb>=0.25.1",
]

# Ruff C901 = McCabe *cyclomatic* complexity (decision/branch count per function).
# complexipy = *cognitive* complexity (readability / nesting); see design for why both gates exist.
[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["C901"]

[tool.ruff.lint.mccabe]
# Ladder complete: McCabe cap 10 (Ruff default culture). Refactors in scrapers, RAG, checkpointer, etc.
max-complexity = 10

[tool.complexipy]
paths = ["hosted_agents", "tests"]
# Ladder complete: cognitive cap 15 (complexipy default culture).
max-complexity-allowed = 15
quiet = true
