[project]
name = "dalc-consumer-demo"
version = "0.1.0"
description = "Example aftermarket wheel registering a declarative_agent.observability_plugins entry point"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."declarative_agent.observability_plugins"]
with-plugins-demo = "dalc_consumer_demo.plugin:PLUGIN"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dalc_consumer_demo"]
